# LipNet-C

./: .gitignore  README.md  dataflow-methodolgy-objective.rtf  endsem_report.docx  synopsis1.docx  temp.ipynb
LipNet Preprocessing/: CMakeLists.txt  LipNet Preprocessing.cpp  LipNet Preprocessing.h
LipNet-main/LipNet-main/: LipNet.ipynb  temp.cpp  temp.ipynb  temp.py  tempCodeRunnerFile.cpp  temp_complete.ipynb
minor1/: alignments.txt  base.cpp  dataset.txt  main.cpp  model.cpp  temp.cpp  temp.ipynb  tempf.cpp
minor1/main/main/: CMakeLists.txt  data.cpp  m.txt  main.cpp  main.ipynb
